--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
----
+ï»¿---
 layout: default
-title: Ôø½úÕÜµÄBlog
+title: ä¸»é¡µ
 ---
 <h2>{{ page.title }}</h2>
-<p>×îĞÂÎÄÕÂ</p>
+<p>æœ€æ–°æ–‡ç« </p>
 <ul>
-¡¡¡¡{% for post in site.posts %}
-¡¡¡¡¡¡¡¡<li>{{ post.date | date_to_string }} <a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a></li>
-¡¡¡¡{% endfor %}
+	{% for post in site.posts %}
+		<li>{{ post.date | date_to_string }} <a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a></li>
+	{% endfor %}
 </ul>
