--- a/index.html
+++ b/index.html
@@ -4,8 +4,13 @@ title: 主页
 ---
 <h2>{{ page.title }}</h2>
 <p>最新文章</p>
+<script type="text/javascript" src="http://v2.uyan.cc/code/uyan.js?uid=2084450"></script>
 <ul>
 	{% for post in site.posts %}
-		<li>{{ post.date | date_to_string }} <a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a></li>
+		<li>{{ post.date | date_to_string }} <a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a> 
+		<!-- UYAN COUNT BEGIN -->
+		<a href="{{ site.baseurl }}{{ post.url }}" id="uyan_count_unit">0条评论</a>
+		<!-- UYAN COUNT END -->
+		</li>
 	{% endfor %}
 </ul>
