--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@ title: 主页
 <script type="text/javascript" src="http://v2.uyan.cc/code/uyan.js?uid=2084450"></script>
 <ul>
 	{% for post in site.posts %}
-		<li>{{ post.date | date_to_string }} <a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a> 
+		<li>{{ post.date | date_to_string }} <a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a> <h4>（
 		<!-- UYAN COUNT BEGIN -->
 		<a href="{{ site.baseurl }}{{ post.url }}" id="uyan_count_unit">0条评论</a>
 		<!-- UYAN COUNT END -->
-		</li>
+		）</h4></li>
 	{% endfor %}
 </ul>
