又忘记编码问题了。。。

--- a/404.html
+++ b/404.html
@@ -1,6 +1,6 @@
 ---
 layout: index
-title: ÕÒ²»µ½Ò³Ãæ
+title: æ‰¾ä¸åˆ°é¡µé¢
 ---
 <h2>{{ page.title }}</h2>
-<script type="text/javascript" src="http://www.qq.com/404/search_children.js" charset="utf-8" homePageUrl="http://yoursite.com/yourPage.html" homePageName="»Øµ½ÎÒµÄÖ÷Ò³"></script>
+<script type="text/javascript" src="http://www.qq.com/404/search_children.js" charset="utf-8" homePageUrl="http://yoursite.com/yourPage.html" homePageName="å›åˆ°æˆ‘çš„ä¸»é¡µ"></script>
