--- a/404.html
+++ b/404.html
@@ -3,4 +3,4 @@ layout: index
 title: 找不到页面
 ---
 <h2>{{ page.title }}</h2>
-<script type="text/javascript" src="http://www.qq.com/404/search_children.js" charset="utf-8" homePageUrl="http://yoursite.com/yourPage.html" homePageName="回到我的主页"></script>
+请在地址栏输入正确的网址，或<a href="/">点击此处</a>返回主页。
