--- a/404.html
+++ b/404.html
@@ -1,6 +1,7 @@
 ---
-layout: nocomment
+layout: default
 title: 找不到页面
+comment:false
 ---
 <h2>{{ page.title }}</h2>
 请在地址栏输入正确的网址，或<a href="/">点击此处</a>返回主页。
