--- a/404.html
+++ b/404.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 title: 找不到页面
-comment: false
+comments: false
 ---
 <h2>{{ page.title }}</h2>
 请在地址栏输入正确的网址，或<a href="/">点击此处</a>返回主页。
