--- a/_posts/2016-02-19-ECNUMap.html
+++ b/_posts/2016-02-19-ECNUMap.html
@@ -8,16 +8,16 @@ title: 走最短路线！华东师大地图分析
 <h3>本科生公寓7号楼往返实验A楼</h3>
 <ul><li>方案A：560m</li>
 <p>这条路线，是最直观的路线。我也曾多次走过，很多次都是无意识地走了这一条路线。</p>
-<img sec="http://7xr2du.com1.z0.glb.clouddn.com/flat7toA3.png/t">
+<img src="http://7xr2du.com1.z0.glb.clouddn.com/flat7toA3.png/t">
 <li>方案B：527m</li>
 <p>这个方案在方案A的基础上进一步进行优化，通过抄近路节省距离的方式，节省约33m的距离，是对最短路线感到饥渴的人士的最佳选择。</p>
 <p>在这个方案下，方案A虽然只多花了约33m，但看起来就毫无优势了。</p>
-<img sec="http://7xr2du.com1.z0.glb.clouddn.com/flat7toA1.png/t">
+<img src="http://7xr2du.com1.z0.glb.clouddn.com/flat7toA1.png/t">
 <li>方案C：560m</li>
 <p>实验A楼在7号楼的东侧，而这个方案一开始却往西走，这看起来是匪夷所思的，相信大部分人是不会这么做的。
 然而，数据表明，方案C和方案A的路程一样，也只比方案B多用了33m。这个现象与华东师大弯弯曲曲的道路密切相关。</p>
 <p>这个方案特别适合对河西食堂面包店或者豪大大鸡排有需求的同学。众所周知，方案A和方案B不会经过任何商家，无法解决温饱问题。
-<img sec="http://7xr2du.com1.z0.glb.clouddn.com/flat7toA2.png/t">
+<img src="http://7xr2du.com1.z0.glb.clouddn.com/flat7toA2.png/t"></ul>
 <h3>本科生公寓7号楼往返图书馆</h3>
 <p>未完待续~</p>
 <h3>本科生公寓7号楼往返二教</h3>
