--- a/_posts/2016-02-19-ECNUMap.html
+++ b/_posts/2016-02-19-ECNUMap.html
@@ -2,7 +2,7 @@
 layout: default
 title: 走最短路线！华东师大地图分析
 ---
-<img sec="http://7xr2du.com1.z0.glb.clouddn.com/ecnumap.png/t">
+<img src="http://7xr2du.com1.z0.glb.clouddn.com/ecnumap.png/t">
 <p>上面是华东师范大学闵行校区的卫星地图，可以看出，道路弯曲，竟没有一条笔直的路。从地图上看，这样设计可能是因为樱桃河环绕闵行，<a href=“https://zh.wikipedia.org/wiki/%E5%90%B4%E5%91%A8%E9%93%81%E8%B7%AF”>吴周铁路</a>贯穿校园。但是这样的设计，给迫切想走最短路线的同学们造成了很大的挑战。</p>
 <p>但是，通过地图测距的方式，可以测出哪一条才是最短路线。</p>
 <h3>本科生公寓7号楼往返实验A楼</h3>
