--- a/_posts/2016-02-19-ECNUMap.html
+++ b/_posts/2016-02-19-ECNUMap.html
@@ -16,11 +16,11 @@ title: 走最短路线！华东师大地图分析
 <li>方案C：560m</li>
 <p>实验A楼在7号楼的东侧，而这个方案一开始却往西走，这看起来是匪夷所思的，相信大部分人是不会这么做的。
 然而，数据表明，方案C和方案A的路程一样，也只比方案B多用了33m。这个现象与华东师大弯弯曲曲的道路密切相关。</p>
-<p>这个方案特别适合对河西食堂面包店或者豪大大鸡排有需求的同学。众所周知，方案A和方案B不会经过任何商家，无法解决温饱问题。
+<p>这个方案特别适合对河西食堂面包店或者豪大大鸡排有需求的同学。众所周知，方案A和方案B不会经过任何商家，无法解决温饱问题。</p>
 <img src="http://7xr2du.com1.z0.glb.clouddn.com/flat7toA2.png/t"></ul>
 <h3>本科生公寓7号楼往返图书馆</h3>
 <p>未完待续~</p>
 <h3>本科生公寓7号楼往返二教</h3>
 <p>敬请期待~</p>
-<br><p>注：本文所用地图均来自<a href="http://www.google.cn/maps/">Google地图</a>，依据其<a href="https://www.google.com/intl/zh-CN_cn/help/terms_maps.html">附加条款</a>获得在互联网上公开展示内容的许可。</p>
 <p>{{ page.date | date_to_string }}</p>
+<br><span class="site-footer-credits">注：本文所用地图均来自<a href="http://www.google.cn/maps/">Google地图</a>，依据其<a href="https://www.google.com/intl/zh-CN_cn/help/terms_maps.html">附加条款</a>获得在互联网上公开展示内容的许可。</span>
