--- a/_posts/2016-03-06-ChemicalTools.html
+++ b/_posts/2016-03-06-ChemicalTools.html
@@ -1,9 +1,10 @@
 ---
 layout: default
-title: Chemical Tools 2.0.2 发布
+title: Chemical Tools 2.0.6 发布
 ---
 <p>我一定有拖延症，3月10日就要上交的作品，拖啊拖啊拖，拖到昨天晚上才开始完善。</p>
 <p>刚才花了几个小时时间完善了我的作品，现在在此发布，看看大家有什么建议。</p>
-<p><a href="https://github.com/njzjz/Chemical-Tools/releases/download/2.0.2/ChemTest2.0.2.rar">点击此处下载Chemical Tools 2.0.2</a></p>
+<p><a href="https://github.com/njzjz/Chemical-Tools/releases/download/2.0.6/Chemical_Tools_2.0.6.rar">点击此处下载Chemical Tools 2.0.6</a>（3月8日更新）</p>
+<p>作品目前已经提交。</p>
 
 <p>{{ page.date | date_to_string }}</p>
