--- a/cjy.html
+++ b/cjy.html
@@ -1,7 +1,9 @@
 ---
 layout: default
-title: 陈俊余废物_陈废_陈俊余是废物_陈俊余是傻子_陈傻_陈俊余是呆子
+title: 陈俊余废物，陈废，陈俊余是废物，陈俊余是傻子，陈傻，陈俊余是呆子
 comments: false
 ---
 <p>我们都知道以下事实：</li>
 <li>陈俊余废物；</li><li>陈废；</li><li>陈俊余是废物；</li><li>陈俊余是傻子；</li><li>陈傻；</li><li>陈俊余是呆子。</li>
+<p>陈废有以下语录：</p>
+<li>我叫陈俊余，我来自 2064 年，是人类反抗军最后的废物。在我的时代，人类被 Google AI 击败，濒临灭绝，残存的人类用最后的资源让我回到 20世纪，希望能够以身作则，把世界与高智商永别，永不出现智能AI。</li>
