--- a/_posts/2016-07-03-Chemical_Principles.html
+++ b/_posts/2016-07-03-Chemical_Principles.html
@@ -3,19 +3,19 @@ layout: default
 title: Chemical Principles 测评
 ---
 <p>众所周知，学院下学期要开一门《化学原理A》，教材是<i><a href="http://libecnu.lib.ecnu.edu.cn/search~S0*chx?/XChemical+Principles&SORT=D/XChemical+Principles&SORT=D&extended=0&SUBKEY=Chemical+Principles/1%2C807%2C807%2CB/frameset&FF=XChemical+Principles&SORT=D&3%2C3%2C">Chemical Principles: The Quest For Insight (International Edition, 5th) Macmillan Publishing House</a></i>。我在学校图书馆找到了这本书，便把它借了下来。</p>
-<p><img scr="http://o2t0fj5x2.qnssl.com/chem4.JPG/t"></p>
+<p><img src="http://o2t0fj5x2.qnssl.com/chem4.JPG/t"></p>
 <p>书很厚，接近1000页；很沉，竟然比《读者的选择》还要厚，天天带着上课要累死……</p>
-<p><img scr="http://o2t0fj5x2.qnssl.com/chem6.JPG/t"></p>
+<p><img src="http://o2t0fj5x2.qnssl.com/chem6.JPG/t"></p>
 <p>反面一看，一本书竟然要518大洋！518！美帝的东西都这么贵吗……好吧确实没有surge贵（逃</p>
-<p><img scr="http://o2t0fj5x2.qnssl.com/chem2.JPG/t"></p>
+<p><img src="http://o2t0fj5x2.qnssl.com/chem2.JPG/t"></p>
 <p>当然这是我从图书馆借来的，但是万一弄丢了就倾家荡产了……两位主编都来自逼格很高的大学。</p>
-<p><img scr="http://o2t0fj5x2.qnssl.com/chem3.JPG/t"></p>
+<p><img src="http://o2t0fj5x2.qnssl.com/chem3.JPG/t"></p>
 <p>目录……可以看到先是学一点结构，再学一点物理（呃）……然后是热力学电化学动力学。可以看到最后出现了一些奇怪的东西，核化学和有机化学……不过这些并不在大纲内。
-<p><img scr="http://o2t0fj5x2.qnssl.com/chem5.JPG/t"></p>
+<p><img src="http://o2t0fj5x2.qnssl.com/chem5.JPG/t"></p>
 <p>书后竟然自带答案，就这一点，完爆国内化学教材若干倍。最不爽的就是国内教材了，习题册竟然还要单独卖一本，还要单独搞个文件夹来看答案。</p>
-<p><img scr="http://o2t0fj5x2.qnssl.com/chem7.JPG/t"></p>
-<p><img scr="http://o2t0fj5x2.qnssl.com/chem8.JPG/t"></p>
+<p><img src="http://o2t0fj5x2.qnssl.com/chem7.JPG/t"></p>
+<p><img src="http://o2t0fj5x2.qnssl.com/chem8.JPG/t"></p>
 <p>插图好漂亮……国内教材根本没有彩色插图好不好！国内教材丑爆了好不好！王琛说他只认识这些插图了……</p>
-<p><img scr="http://o2t0fj5x2.qnssl.com/chem1.JPG/t"></p>
+<p><img src="http://o2t0fj5x2.qnssl.com/chem1.JPG/t"></p>
 <p>有一节叫“方程式配平”，一本正经地告诉你氢气和氧气反应怎么配平……国外的中学不学化学吗？</p>
 <p>{{ page.date | date_to_string }}</p>
