--- a/ecnu/index.html
+++ b/ecnu/index.html
@@ -5,10 +5,10 @@ comments: false
 ---
 <ul>
 	<li>前言</li>
-	<li>第一章 概述</li>
-	<li>第二章 学业篇</li>
-	<li>第三章 活动篇</li>
-	<li>第四章 生活篇</li>
-	<li>第五章 其它篇</li>
+	<li><a href="1.html">第一章 概述</a></li>
+	<li><a href="2.html">第二章 学业篇</a></li>
+	<li><a href="3.html">第三章 活动篇</a></li>
+	<li><a href="4.html">第四章 生活篇</a></li>
+	<li><a href="5.html">第五章 其它篇</a></li>
 	<li>后记</li>
 </ul>
