--- a/ecnu/2.html
+++ b/ecnu/2.html
@@ -2,4 +2,22 @@
 layout: ecnu
 title: 第二章 学业篇
 ---
+<p>关于分数和成绩： </p>
+<p>评奖学金的科目有：英语类（必修课程）、计算机类、思政类、学科基础课、专业必修课。采用分数对学分加权平均数，优秀干事、优秀班干部、优秀志愿者可以获得一定的加分。 </p>
+<p>推免科目有：专业必修课、学科基础课。采用分数对学分取加权平均进行排名。还有其他素质类评比，也即发表 SCI 文章、获得专利、参加高级别竞赛均可获得加分。 </p>
+<p>从加权平均情况看，学分高的课一定要拿好成绩、高绩点。 </p>
+<p>关于推免： </p>
+<p>推免人数大约为 25%，其中还有定向推免到北京师范大学的名额。从推免政策上看，想要获得推免，在有很好成绩的同时，还应积极参加一些竞赛，更好的做法是加入导师课题组，从事科研并发表文章，会获得更多的加分。 </p>
+<p>关于实习：化学类的实习分为：教育实习与科研实习。科研实习只要在一个老师的课题组，呆足一定时间并取得一定成果即可。教育实习可由学校安排，但前提是修完与师范生一样的教师教育必修专业课程，虽然是跨年级跨专业选课，但依旧可以冲抵一部分学分，不浪费。 </p>
+<p>关于成为一名教师： </p>
+<p>无论是否为免费师范生，成为一名教师的必要条件是考取国家颁发的教师资格证书。</p>
+<p>大二即可参加普通话水平测试，学校为大家报销考试费用。考试科目有： </p>
+<p>笔试（含学科知识与能力、综合素质），还有心理学和教育学。所以推荐想当老师的同学可以修读这两门课冲抵通识学分。笔试成绩保留两年。一般在大三考。</p> 
+<p>面试：类似于上一节课，注重细节就能过。 </p>
+<p>自习攻略： </p>
+<p>1、	孟宪承书院（学生共享空间）：一楼设施条件各方面很好，整洁干净，有插座，只是光线略暗，座位不多。二楼三楼也有很多房间可以自习，很少有人知道，但要确定房间是否有他人申请占用。 </p>
+<p>2、	图书馆：图书馆分裙楼和主楼。裙楼是大家自习和借书的地方，一共五层，按照中国图书分类法对图书归类，每一层均可自习。1F 有电子阅览室、自习室、保存本阅览室和举办讲座、培训的教室；2F 有专门的自习室和外文图书阅览室，咖啡馆、读者咨询、展览和借阅书籍有关的事情均在本楼；3F 是报刊阅览区，但书包不能带入，但可以寄存。4F、5F 是中文类书籍和工具书区域，也是本馆自习位置最多的楼层，靠窗处有插座，化学系相关书籍均在 4F 编号为 O61 的架子上。此外裙楼 5F 的阁楼有十几间用于讨论和研究的小房间，使用需要提前预约，“开房”时，根据房间大小需要相应数量的校园卡激活。另外，图书馆主楼一般为办公场所和学校信息化办公室，大家校园卡丢了重新领取就在主楼 2F；主楼的其他楼层也有各种各样的房间供使用，也需要提前预约。具体预约和使用情况，请打开图书馆网站，于“在线服务” 菜单下点击“创意空间预约”。</p> 
+<p>3、	教学楼：学校一共有四座教学楼，即第一教学楼、第二教学楼、第三教学楼、第四教学楼。四座教学楼每天都会在教学楼入口处的黑板上公示今天可用作自习的教室，也可以在没有人上课的教室自习，但在非期末考试时期，可能会被物业阿姨驱逐，最保险的自习教室在第三教学楼、第四教学楼的 1F。每天第一二三教学楼自习室的休息时间是 22：00，第四教学楼的时间是到 24：00。此外，在考研和期末考试期间，教务处网站会公布一些教室作为通宵自习室，但 24：00 后学校会锁教学楼门，一直到早上 6：00 你才能被放出来 o(∩_∩)o 。 </p>
+<p>4、	其他：每个寝室楼的 1F 都有学生活动室，有桌有椅，可以学习；实验 A 楼为计算机楼，每天都会固定开放一个机房供大家学习复习计算机方面的知识。 </p>
+
 <h2></h2>
