--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 title: 站点导航
 comments: false
 ---
-<h2><a href="http://chemapp.njzjz.win/">化学e+ Web版</a></h2>
-<h2><a href="http://chem.njzjz.win/">化学e+ 下载</a></h2>
-<h2><a href="/blog.html">曾晋哲的Blog</a></h2>
-<h2><a href="http://tieba.njzjz.win/">贴吧云签到</a></h2>
+<h2><img src="/img/chemicaltools.png" width=30 height=30><a href="http://chemapp.njzjz.win/">化学e+ Web版</a></h2>
+<h2><img src="/img/chemicaltools.png" width=30 height=30><a href="http://chem.njzjz.win/">化学e+ 下载</a></h2>
+<h2><img src="/img/blog.jpg" width=30 height=30><a href="/blog.html">曾晋哲的Blog</a></h2>
+<h2><img src="/img/tieba.jpg" width=30 height=30><a href="http://tieba.njzjz.win/">贴吧云签到</a></h2>
