--- a/index.html
+++ b/index.html
@@ -1,9 +1,31 @@
----
-layout: default
-title: 站点导航
-comments: false
----
-<h2><img src="/img/chemicaltools.png" width=30 height=30><a href="http://chemapp.njzjz.win/">化学e+ Web版</a></h2>
-<h2><img src="/img/chemicaltools.png" width=30 height=30><a href="http://chem.njzjz.win/">化学e+ 下载</a></h2>
-<h2><img src="/img/blog.jpg" width=30 height=30><a href="/blog.html">曾晋哲的Blog</a></h2>
-<h2><img src="/img/tieba.jpg" width=30 height=30><a href="http://tieba.njzjz.win/">贴吧云签到</a></h2>
+<!DOCTYPE html>
+<html lang="zh-cn">
+  <head>
+   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
+        <title>曾晋哲的网站</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" type="text/css" href="/stylesheets/normalize.css" media="screen">
+        <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
+        <link rel="stylesheet" type="text/css" href="/stylesheets/stylesheet.css" media="screen">
+        <link rel="stylesheet" type="text/css" href="/stylesheets/github-light.css" media="screen">
+        <script src="/js/googleanalytics.js"></script>
+  </head>
+  <body>
+    <section class="page-header">
+      <h1 class="project-name"><a class="nocolor" href="/" >曾晋哲的网站</a></h1>
+      <h2 class="project-tagline">苟利国家生死以，岂因祸福避趋之</h2>
+    </section>
+    <section class="main-content">
+                <h2>站点导航</h2>
+				<h2><img src="/img/blog.jpg" width=30 height=30><a href="https://blog.njzjz.win/">曾晋哲的博客</a></h2>
+                <h2><img src="/img/chemicaltools.png" width=30 height=30><a href="https://chem.njzjz.win/">化学e+</a></h2>
+                <h2><img src="/img/chemicaltools.png" width=30 height=30><a href="https://chemapp.njzjz.win/">化学e+（网页版）</a></h2>
+                <h2><img src="/img/chemicaltools.png" width=30 height=30><a href="https://bbs.zgchemicals.mobi/">论坛</a></h2>
+                <h2><img src="/img/tieba.jpg" width=30 height=30><a href="https://tieba.zgchemicals.mobi/">贴吧云签到</a></h2>
+                <footer class="site-footer">
+        <a href="https://github.com/njzjz">Github</a>
+		<p>Hosted by <a href="https://pages.coding.me" style="font-weight: bold">Coding Pages</a></p>
+                </footer>
+    </section>
+  </body>
+</html>
