use another website

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 **
 */
 
-window.config = {"organization":false,"order":"CREATED_AT","title":"曾晋哲的博客","user":"njzjz","repository":"njzjz.github.io","authors":"","ignores":"","token":"3959a00dfea6f45e353fa40d7944efc035d6c2c2","perpage":5}
+window.config = {"organization":false,"order":"CREATED_AT","title":"曾晋哲的博客","user":"njzjz","repository":"njzjz.github.io","authors":"","ignores":"","token":"3#959a00dfea6f45e353fa40d7944efc035d6c2c2","perpage":5}
 </script>
 
 <script>
