--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ if (ua.indexOf('MSIE') > -1 || ua.match(/Trident\/7\./)) {
 <body>
   <div class="page home">
     <div id="user"></div>
-    <div id="map" style="text-align: center;"><img src="https://chem.njzjz.win/images/ic_launcher.png" width="20" height="20"/><a href="https://chem.njzjz.win/">化学e+</a> · <img src="https://dl2.macupdate.com/images/icons256/15675.png?d=1526908626" width="20" height="20" /><a href="https://chemapp.njzjz.win/">化学e+（网页版）</a> · <img src="http://pic.uzzf.com/up/2016-4/2016428171222421.png" width="20" height="20" /><a href="https://tieba.zgchemicals.mobi/">贴吧云签到</a> · <img src="http://rs.xidian.cc/images/bbs.png" width="20" height="20" /><a href="https://bbs.zgchemicals.mobi">论坛</a></div>
+    <div id="map" style="text-align: center;"><img src="https://chem.njzjz.win/images/ic_launcher.png" width="20" height="20"/><a href="https://chem.njzjz.win/">化学e+</a>（<a href="https://chemapp.njzjz.win/">网页版</a>） · <img src="http://pic.uzzf.com/up/2016-4/2016428171222421.png" width="20" height="20" /><a href="https://tieba.zgchemicals.mobi/">贴吧云签</a></div>
     <div id="posts"></div>
   </div>
   <div class="page single">
