--- a/index.html
+++ b/index.html
@@ -39,14 +39,14 @@ if (ua.indexOf('MSIE') > -1 || ua.match(/Trident\/7\./)) {
 	<a href="https://cv.njzjz.win/">CV<!--{cn}个人简历--></a>
 	<a href="http://t.njzjz.win/r">Rearch Group<!--{cn}课题组--></a>
 	<div class="dropdown">
-		<div class="dropbtn">Softwares<!--{cn}软件--></div>
+		<a href="javascript:void(0);" class="dropbtn">Softwares<!--{cn}软件--></a>
 		<div class="dropdown-content">
 			<a href="https://reacnetgenerator.njzjz.win/">ReacNetGenerator</a>
 			<a href="https://chem.njzjz.win/">Chemical Tools<!--{cn}化学e+--></a>
 		</div>
 	</div>
 	<div class="dropdown">
-		<div class="dropbtn">Apps<!--{cn}应用--></div>
+		<a href="javascript:void(0);" class="dropbtn">Apps<!--{cn}应用--></a>
 		<div class="dropdown-content">
 			<a href="https://chemicaltools.njzjz.win/">Chemical Tools<!--{cn}化学e+--></a>
 			<a href="https://color.njzjz.win/">Color</a>
@@ -54,7 +54,7 @@ if (ua.indexOf('MSIE') > -1 || ua.match(/Trident\/7\./)) {
 		</div>
 	</div>	
 	<div class="dropdown">
-		<div class="dropbtn">Websites<!--{cn}网站--></div>
+		<a href="javascript:void(0);" class="dropbtn">Websites<!--{cn}网站--></a>
 		<div class="dropdown-content">
 			<a href="https://proxy.njzjz.win/">Proxy Share<!--{cn}代理分享--></a>
 			<a href="http://tieba.njzjz.win/">Tieba Sign<!--{cn}贴吧云签--></a>
