--- a/index.html
+++ b/index.html
@@ -36,8 +36,13 @@ if (ua.indexOf('MSIE') > -1 || ua.match(/Trident\/7\./)) {
 </head>
 <body>
   <div id="map" class="navbar">
-	<a href="https://cv.njzjz.win/">CV<!--{cn}个人简历--></a>
-	<a href="http://t.njzjz.win/r">Rearch Group<!--{cn}课题组--></a>
+  	<div class="dropdown">
+		<a href="javascript:void(0);" class="dropbtn">Information<!--{cn}信息--></a>
+		<div class="dropdown-content">
+			<a href="https://cv.njzjz.win/">CV<!--{cn}个人简历--></a>
+			<a href="http://group.njzjz.win/">Rearch Group<!--{cn}课题组--></a>
+		</div>
+	</div>
 	<div class="dropdown">
 		<a href="javascript:void(0);" class="dropbtn">Softwares<!--{cn}软件--></a>
 		<div class="dropdown-content">
@@ -56,9 +61,10 @@ if (ua.indexOf('MSIE') > -1 || ua.match(/Trident\/7\./)) {
 	<div class="dropdown">
 		<a href="javascript:void(0);" class="dropbtn">Websites<!--{cn}网站--></a>
 		<div class="dropdown-content">
+			<a href="https://navi.njzjz.win/">Navi<!--{cn}导航--></a>
 			<a href="https://proxy.njzjz.win/">Proxy Share<!--{cn}代理分享--></a>
 			<a href="http://tieba.njzjz.win/">Tieba Sign<!--{cn}贴吧云签--></a>
-			<a href="https://github.com/njzjz">GitHub</a>
+			<a href="http://github.njzjz.win/">GitHub</a>
 		</div>
 	</div>
 	<a href="javascript:if(tran.getLang()==='default'){tran.setLang('cn');}else {tran.setLang('default');}">中文<!--{cn}English--></a>
