--- a/404.html
+++ b/404.html
@@ -1,3 +1,3 @@
 <html><head><title>找不到页面</title></head><body>
-	<script type="text/javascript" src="//qzonestyle.gtimg.cn/qzone/hybrid/app/404/search_children.js" charset="utf-8" homePageUrl="https://njzjz.win/" homePageName="回到我的主页"></script>
+	<script type="text/javascript" src="//qzonestyle.gtimg.cn/qzone/hybrid/app/404/search_children.js" charset="utf-8" homePageUrl="https://njzjz.win/" homePageName="返回曾晋哲的博客"></script>
 </body></html>
