--- a/404.html
+++ b/404.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <link rel="shortcut icon" type="image/x-icon" href="img/ico.png" />
   <link rel="mask-icon" type="" href="img/ico.png" />
-  <title>找不到页面 - 上海巧坤化工科技有限公司</title>
+  <title>404 Not Found - Jinzhe Zeng</title>
   <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css'>
    <style>
       *
