--- a/source/404.html
+++ b/source/404.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <title>404 Not Found - Jinzhe Zeng</title>
-    <link rel='stylesheet' href='https://cdn.jsdelivr.net/npm/bootstrap@3.4.1/dist/css/bootstrap.min.css'>
-    <link rel='stylesheet' href='https://cdn.jsdelivr.net/npm/@njzjz/404page@0.0.2/dist/main.css'>
+    <link rel='stylesheet' href='https://unpkg.com/bootstrap@3.4.1/dist/css/bootstrap.min.css'>
+    <link rel='stylesheet' href='https://unpkg.com/@njzjz/404page@0.0.2/dist/main.css'>
 </head>
 
 <body>
     <div class="error"></div>
-    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@njzjz/404page@0.0.2/dist/main.js"></script>
+    <script src="https://unpkg.com/jquery@3.5.1/dist/jquery.min.js"></script>
+    <script src="https://unpkg.com/@njzjz/404page@0.0.2/dist/main.js"></script>
     <script>
         bumpCode("404", "OH!", "Sorry! Page not found", "Return to Jinzhe Zeng's blog");
     </script>
